@startuml

class RimViewWindow {
  RimMdiWindowController mdiWindowGeometry()
}

note top of RimViewWindow : Updated 2018-04-18 (NOTE : sub classes of RimViewWindow is not complete, consider Doxygen for this info

class RimView {
}

RimViewWindow <|-- Rim3dView

package plots {
RimViewWindow <|-- RimSummaryPlot
RimViewWindow <|-- RimTotalWellAllocationPlot
RimViewWindow <|-- RimWellAllocationPlot
RimViewWindow <|-- RimWellLogPlot
}

RimViewWindow *-- RimMdiWindowController

Rim3dView <|-- Rim2dIntersectionView

Rim3dView <|-- RimGridView

RimGridView <|-- RimEclipseView
RimGridView <|-- RimGeoMechView



@enduml
